--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is BY."
+description: "Hey, this is Toan."
 header-img: "img/about_background.jpg"
 ---
 
@@ -21,7 +21,7 @@ header-img: "img/about_background.jpg"
     <p>Hey，我是<strong>toan</strong>，一只后端程序。</p>
 
     <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。</p>
-    <p>GitHub主页<a href="https://github.com/toanwang">👉GitHub·BY</a>如果有什么问题，欢迎提出探讨~</p>
+<!--     <p>GitHub主页<a href="https://github.com/toanwang">👉GitHub·BY</a>如果有什么问题，欢迎提出探讨~</p> -->
 
     <p></p>
     
