--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ header-img: "img/about_background.jpg"
     <blockquote><p>冰冻三尺 非一日之寒<br>
     积土成山 非斯须之作</p></blockquote>
 
-    <p>Hey，我是<strong>toan</strong>，一只后端程序。</p>
+    <p>Hey，我是<strong>toan</strong>，一只后端程序猿🐒。</p>
 
     <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。</p>
 <!--     <p>GitHub主页<a href="https://github.com/toanwang">👉GitHub·BY</a>如果有什么问题，欢迎提出探讨~</p> -->
