--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 title: Tags
 layout: default
-description: keep hungry keep foolish
+description: Just Do It
 header-img: "img/tag_background.jpg"
 ---
 
